# ninsho

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: deploy.yml
app/core/: config.py
migrations/: env.py
migrations/versions/: 2025_09_27_1923-a1792edd7e0d_recreate_user_table.py
ninsho/: app.py  config.py
ninsho/api/: auth.py  dependency.py  utils.py
ninsho/db/: base.py  register_models.py  user.py
ninsho/models/: user.py
